force-app/main/default/objects/VoiceCall/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field links the Case to this record and among its multiple uses, one is to utilise it for omni channel routing eligibility calculations</description>
    <inlineHelpText>This field links the Case to this record and among its multiple uses, one is to utilise it for omni channel routing eligibility calculations</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Voice Calls</relationshipLabel>
    <relationshipName>VoiceCalls</relationshipName>
    <type>Lookup</type>
</CustomField>