force-app/main/default/objects/VoiceCall/fields/CustomerParticipantId__c.field-meta.xml
<CustomField>
    <fullName>CustomerParticipantId__c</fullName>
    <description>This customer participant id value from Geneys. This is backend field use to to make API calls to Genesys</description>
    <inlineHelpText>This customer participant id value from Geneys. This is backend field use to to make API calls to Genesys</inlineHelpText>
    <label>Customer Participant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>