force-app/main/default/objects/VoiceCall/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Container for Division attribute provided by Genesys when the record gets created. Should contain AP/ST</description>
    <inlineHelpText>Container for Division attribute provided by Genesys when the record gets created. Should contain AP/ST</inlineHelpText>
    <label>Division</label>
    <length>12</length>
    <type>Text</type>
</CustomField>