force-app/main/default/objects/VoiceCall/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Outcome of Voice Call</description>
    <inlineHelpText>Outcome of Voice Call</inlineHelpText>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unlinked contact</fullName>
            </value>
            <value>
                <fullName>FCR</fullName>
            </value>
            <value>
                <fullName>Enquiry lodged</fullName>
            </value>
            <value>
                <fullName>Enquiry updated</fullName>
            </value>
            <value>
                <fullName>Pricing &gt; Domestic Letters &gt; Express Post &gt; Investigation</fullName>
                <isActive>false</isActive>
                <label>Pricing &gt; Domestic Letters &gt; Express Post &gt; Investigation</label>
            </value>
            <value>
                <fullName>Safety issue &gt; Domestic Parcels &gt; Courier Post &gt; General Enquiry</fullName>
                <isActive>false</isActive>
                <label>Safety issue &gt; Domestic Parcels &gt; Courier Post &gt; General Enquiry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>